@@ -74,7 +74,6 @@ binopdf
 binornd
 Biomathematics
 bitmapped
-bitmax
 bitwise
 bivariate
 Blackman
