@@ -619,12 +619,7 @@ bits of the native floating point format representation of @code{10}.
 
 As the maximum value that can be represented by a number is important
 for bit manipulation, particularly when forming masks, Octave supplies
-the function @code{bitmax}.
-
-@DOCSTRING(bitmax)
-
-This is the double precision version of the function @code{intmax},
-previously discussed.
+two functions 'flintmax' for floating point integers, and 'intmax'.
 
 Octave also includes the basic bitwise 'and', 'or', and 'exclusive or'
 operators.
