@@ -46,6 +46,7 @@ Summary of important user-visible changes for version 4.2:
 
       Function             | Replacement
       ---------------------|------------------
+      bitmax               | flintmax
       wavread              | audioread
       wavwrite             | audiowrite
 
